--- a/demo/md/w01_crue_74/w01_74.md
+++ b/demo/md/w01_crue_74/w01_74.md
@@ -3,3 +3,11 @@
 ### W1-P1: Get Request demo in Postman
 
 ![](w1-p1.png)
+
+```
+16a3c2f Chen211410674   Wed Feb 21 19:22:49 2024 +0800  W1-P1: Get Request demo in Postman
+```
+
+```
+git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2024-02-20"
+```
