--- a/demo/md/w01_crue_74/w01_74.md
+++ b/demo/md/w01_crue_74/w01_74.md
@@ -8,6 +8,16 @@
 16a3c2f Chen211410674   Wed Feb 21 19:22:49 2024 +0800  W1-P1: Get Request demo in Postman
 ```
 
+### W1-P2: Read card_xx table in Supabase
+
+![](w1-p2.png)
+
 ```
-git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2024-02-20"
+d408bf1 Chen211410674   Wed Feb 21 19:52:41 2024 +0800  W1-P2: Read card_xx table in Supabase
 ```
+
+### W1-P3: Create a card into card_xx table in Supabase
+
+![](w1-p3-1.png)
+
+![](w1-p3-2.png)
