--- a/demo/md/w01_crue_74/w01_74.md
+++ b/demo/md/w01_crue_74/w01_74.md
@@ -23,5 +23,13 @@ d408bf1 Chen211410674   Wed Feb 21 19:52:41 2024 +0800  W1-P2: Read card_xx tabl
 ![](w1-p3-2.png)
 
 ```
-364f133 Chen211410674   Wed Feb 21 20:25:47 2024 +0800  W1-P3: Create a card into card_xx table in Supabase
+dd09ab0 Chen211410674   Wed Feb 21 20:29:17 2024 +0800  W1-P3: Create a card into card_xx table in Supabase
 ```
+
+### W1-P4: Update a card in Supabase using remote photo
+
+![](w1-p4-1.png)
+
+![](w1-p4-2.png)
+
+![](w1-p4-3.png)
