--- a/demo/md/w01_crue_74/w01_74.md
+++ b/demo/md/w01_crue_74/w01_74.md
@@ -33,3 +33,8 @@ dd09ab0 Chen211410674   Wed Feb 21 20:29:17 2024 +0800  W1-P3: Create a card int
 ![](w1-p4-2.png)
 
 ![](w1-p4-3.png)
+
+```
+
+2749368 Chen211410674   Wed Feb 21 20:57:55 2024 +0800  W1-P4: Update a card in Supabase using remote photo
+```
