W3-P1: Use SupaClientGetBlog_xx.jsx (supabase client) to get card_xx data

--- a/demo/md/w03_crud_74/w03_74.md
+++ b/demo/md/w03_crud_74/w03_74.md
@@ -1,5 +1,5 @@
 [My github URL](https://github.com/CHEN211410674/1122-wp2-2N_74)
 
-### W3-P1: Use SupaClientGetBlog_xx.jsx (supabase client) to get card_xx data
+### W3-P1: Use SupaClientGetBlog_74.jsx (supabase client) to get card_74 data
  
 ![](w3-p1.png)
