--- a/demo/md/w03_crud_74/w03_74.md
+++ b/demo/md/w03_crud_74/w03_74.md
@@ -6,3 +6,6 @@
 ### W3-P2: Use SupaGetBlog_74.jsx to get card_74 data
 ![](w3-p2.png)
 
+### W3-P3: Use SupaPostBlog_xx.jsx to add blog data
+ 
+![](w3-p3.png)
