W3-P4: Use SupaPatchBlog_74.jsx to modify blog data

--- a/demo/md/w03_crud_74/w03_74.md
+++ b/demo/md/w03_crud_74/w03_74.md
@@ -6,6 +6,10 @@
 ### W3-P2: Use SupaGetBlog_74.jsx to get card_74 data
 ![](w3-p2.png)
 
-### W3-P3: Use SupaPostBlog_xx.jsx to add blog data
+### W3-P3: Use SupaPostBlog_74.jsx to add blog data
  
 ![](w3-p3.png)
+
+### W3-P4: Use SupaPatchBlog_74.jsx to modify blog data
+ 
+![](w3-p4.png)
