W3-P5: Use SupaDeleteBlog_74.jsx to delete blog data

--- a/demo/md/w03_crud_74/w03_74.md
+++ b/demo/md/w03_crud_74/w03_74.md
@@ -13,3 +13,7 @@
 ### W3-P4: Use SupaPatchBlog_74.jsx to modify blog data
  
 ![](w3-p4.png)
+
+### W3-P5: Use SupaDeleteBlog_74.jsx to delete blog data
+ 
+![](w3-p5.png)
