--- a/demo/md/w04_tasks_74/w04_74.md
+++ b/demo/md/w04_tasks_74/w04_74.md
@@ -4,6 +4,34 @@
 
 ![](w04_p1.png)
 
+```
+179c751 Chen211410674   Wed Mar 13 19:08:44 2024 +0800  W4-P1: Server: implement GET /api/tasks~
+```
+
 ### W4-P2: Server: implement POST /api/tasks
 
 ![](w04_p2.png)
+
+```
+
+8897ad5 Chen211410674   Wed Mar 13 21:25:18 2024 +0800  W4-P2: Server: implement POST /api/tasks1~
+```
+
+### W4-P3: Server: implement PATCH /api/tasks/:id
+
+![](w4_p3.png)
+
+```
+620f66f Chen211410674   Wed Mar 13 22:25:18 2024 +0800  W4-P3: Server: implement PATCH /api/tasks/:id
+```
+
+### All logs
+
+![](w4_p4.png)
+
+```
+620f66f Chen211410674   Wed Mar 13 22:25:18 2024 +0800  W4-P3: Server: implement PATCH /api/tasks/:id
+8897ad5 Chen211410674   Wed Mar 13 21:25:18 2024 +0800  W4-P2: Server: implement POST /api/tasks1~
+179c751 Chen211410674   Wed Mar 13 19:08:44 2024 +0800  W4-P1: Server: implement GET /api/tasks~
+
+```
