W5-P2: Use React Query to get tasks data from Supabase

--- a/demo/md/w05_tasks_74/w05_74.md
+++ b/demo/md/w05_tasks_74/w05_74.md
@@ -3,3 +3,11 @@
 ### W5-P1:Create task_74 table in Supabase with 4 data using SQL
 
 ![](w05-p1.png)
+
+### W5-P2: Use React Query to get tasks data from Supabase
+
+![](w05-p2-1.png)
+
+![](w05-p2-2.png)
+
+![](w05-p2-3.png)
