--- a/demo/md/w05_tasks_74/w05_74.md
+++ b/demo/md/w05_tasks_74/w05_74.md
@@ -15,3 +15,13 @@
 ### W5-P3: Deploy W5-P2 to Vercel
 
 ![](w05-p3.png)
+
+### W5-P4: Create new Task, deploy W5-P3 to Vercel
+
+#### => local
+
+![](w5-p4-1.png)
+
+#### => vercel
+
+![](w5-p4-2.png)
