--- a/demo/md/w05_tasks_74/w05_74.md
+++ b/demo/md/w05_tasks_74/w05_74.md
@@ -4,6 +4,10 @@
 
 ![](w05-p1.png)
 
+```
+git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2024-03-19"
+```
+
 ### W5-P2: Use React Query to get tasks data from Supabase
 
 ![](w05-p2-1.png)
@@ -12,9 +16,18 @@
 
 ![](w05-p2-3.png)
 
+```
+56b5908 Chen211410674   Wed Mar 20 21:15:33 2024 +0800  W5-P2: Use React Query to get tasks data from Supabase
+```
+
 ### W5-P3: Deploy W5-P2 to Vercel
 
 ![](w05-p3.png)
+
+```
+5d3d491 Chen211410674   Wed Mar 20 21:44:21 2024 +0800  W5-P3: Deploy W5-P2 to Vercel
+
+```
 
 ### W5-P4: Create new Task, deploy W5-P3 to Vercel
 
@@ -25,3 +38,20 @@
 #### => vercel
 
 ![](w5-p4-2.png)
+
+```
+03f8e00 Chen211410674   Wed Mar 20 21:59:43 2024 +0800  W5-P4: Create new Task, deploy W5-P3 to Vercel
+
+```
+
+### W5-P5: Git logs of W5
+
+![](w05-p5.png)
+
+```
+03f8e00 Chen211410674   Wed Mar 20 21:59:43 2024 +0800  W5-P4: Create new Task, deploy W5-P3 to Vercel
+6796bd8 Chen211410674   Wed Mar 20 21:50:01 2024 +0800  W5-P3: Deploy W5-P2 to Vercel
+5d3d491 Chen211410674   Wed Mar 20 21:44:21 2024 +0800  W5-P3: Deploy W5-P2 to Vercel
+56b5908 Chen211410674   Wed Mar 20 21:15:33 2024 +0800  W5-P2: Use React Query to get tasks data from Supabase
+0bbbafd Chen211410674   Wed Mar 20 18:42:22 2024 +0800  W5-P1:Create task_74 table in Supabase with 4 data using SQL
+```
