--- a/demo/md/w06/w06_74.md
+++ b/demo/md/w06/w06_74.md
@@ -3,3 +3,13 @@
 ### W6-P1: Update a task in Supabase
 
 ![](w6-p1.png)
+
+### W6-P2: Delete a task in Supabase
+
+#### => local
+
+![](w6-p2-1.png)
+
+#### => Vercel: insert a task, edit the task, delete the task
+
+![](w6-p2-2.png)
