W10-P3: Get all blogs using route /mid1Blog_74 (自行完成)

--- a/demo/md/w10/w10_74.md
+++ b/demo/md/w10/w10_74.md
@@ -11,3 +11,9 @@
 ![](w10-p2-1.png)
 
 ![](w10-p2-2.png)
+
+### W10-P3: Get all blogs using route /mid1Blog_74 (自行完成)
+
+![](w10-p3-1.png)
+
+![](w10-p3-2.png)
