W10-P4: Git logs of W6

--- a/demo/md/w10/w10_74.md
+++ b/demo/md/w10/w10_74.md
@@ -6,14 +6,39 @@
 
 ![](w10-p1-2.png)
 
+```
+494f717 Chen211410674   Wed Apr 24 21:21:09 2024 +0800  ### W10-P1: Create HomeLayout_74 for all routes
+
+```
+
 ### W10-P2: Add Navbar_74 with 3 menu items
 
 ![](w10-p2-1.png)
 
 ![](w10-p2-2.png)
 
+```
+8fdc965 Chen211410674   Wed Apr 24 22:18:56 2024 +0800  W10-P2: Add Navbar_74 with 3 menu items
+
+```
+
 ### W10-P3: Get all blogs using route /mid1Blog_74 (自行完成)
 
 ![](w10-p3-1.png)
 
 ![](w10-p3-2.png)
+
+```
+cf3c000 Chen211410674   Wed Apr 24 22:24:35 2024 +0800  W10-P3: Get all blogs using route /mid1Blog_74 (自行完成)
+
+```
+
+### W10-P4: Git logs of W6
+
+```
+
+cf3c000 Chen211410674   Wed Apr 24 22:24:35 2024 +0800  W10-P3: Get all blogs using route /mid1Blog_74 (自行完成)
+8fdc965 Chen211410674   Wed Apr 24 22:18:56 2024 +0800  W10-P2: Add Navbar_74 with 3 menu items
+494f717 Chen211410674   Wed Apr 24 21:21:09 2024 +0800  ### W10-P1: Create HomeLayout_74 for all routes
+
+```
