--- a/demo/md/W11/w11_74.md
+++ b/demo/md/W11/w11_74.md
@@ -11,3 +11,13 @@
 ![](w11-p2-1.png)
  
 ![](w11-p2-2.png)
+
+### W11-P3: Use Postman to test DELETE /api/blogs/clearAll, and POST /api/blogs/loadAll
+ 
+#### => test DELETE /api/blogs/clearAll
+ 
+![](w11-p3-1.png)
+ 
+#### => test POST /api/blogs/loadAll
+ 
+![](w11-p3-2.png)
