W13-P2: Get first booking_xx data, with corresponding cabin_74 and guest_74 data

--- a/demo/md/w13/w13_74.md
+++ b/demo/md/w13/w13_74.md
@@ -1,5 +1,9 @@
 [My github URL](https://github.com/CHEN211410674/1122-wp2-2N_74)
 
-Video: W13-P1: Get first Cabins_74 data from Supabase
+W13-P1: Get first Cabins_74 data from Supabase
  
 ![](w13-p1.png)
+
+### W13-P2: Get first booking_xx data, with corresponding cabin_xx and guest_74 data
+ 
+![](w13-p2.png)
