--- a/demo/md/w13/w13_74.md
+++ b/demo/md/w13/w13_74.md
@@ -1,9 +1,29 @@
 [My github URL](https://github.com/CHEN211410674/1122-wp2-2N_74)
 
 W13-P1: Get first Cabins_74 data from Supabase
- 
+
 ![](w13-p1.png)
 
-### W13-P2: Get first booking_xx data, with corresponding cabin_xx and guest_74 data
- 
+```
+548efe5 Chen211410674   Wed May 15 20:33:24 2024 +0800  W13-P1: Get first Cabins_74 data from Supabase
+
+```
+
+### W13-P2: Get first booking_74 data, with corresponding cabin_xx and guest_74 data
+
 ![](w13-p2.png)
+
+```
+2c60a83 Chen211410674   Wed May 15 21:41:52 2024 +0800  W13-P2: Get first booking_74 data, with corresponding cabin_74 and guest_74 data
+
+```
+
+### W13-P3: Git logs of W13
+
+```
+git log --pretty=format:"%h%x09%an%x09%ad%x09%s" --after="2024-05-14"
+
+2c60a83 Chen211410674   Wed May 15 21:41:52 2024 +0800  W13-P2: Get first booking_xx data, with corresponding cabin_74 and guest_74 data
+548efe5 Chen211410674   Wed May 15 20:33:24 2024 +0800  W13-P1: Get first Cabins_74 data from Supabase
+
+```
