--- a/demo/md/w14/w13_74.md
+++ b/demo/md/w14/w13_74.md
@@ -1,6 +1,12 @@
 [My github URL](https://github.com/CHEN211410674/1122-wp2-2N_74)
 
+
+W14-P1: Use sql to create schemas of cabins_74, guests_74, bookings_74, settings_74, and use Uploader to upload all data
+
 ![](w14-p1-1.png)
  
 ![](w14-p1-2.png)
  
+![](w14-p1-3.png)
+ 
+![](w14-p1-4.png)
