W15-P2: For landing page, get 8 cabins data from Supabase

--- a/demo/md/w15/w15_74.md
+++ b/demo/md/w15/w15_74.md
@@ -4,3 +4,7 @@
  W15-P1: Show static page <LandingStatic_74 /> using route /landing
  
 ![](w15-p1.png)
+
+W15-P2: For landing page, get 8 cabins data from Supabase
+ 
+![](w15-p2.png)
