--- a/demo/md/w15/w15_74.md
+++ b/demo/md/w15/w15_74.md
@@ -1,10 +1,15 @@
 [My github URL](https://github.com/CHEN211410674/1122-wp2-2N_74)
 
 
- W15-P1: Show static page <LandingStatic_74 /> using route /landing
+### W15-P1: Show static page <LandingStatic_74 /> using route /landing
  
 ![](w15-p1.png)
 
-W15-P2: For landing page, get 8 cabins data from Supabase
+### W15-P2: For landing page, get 8 cabins data from Supabase
  
 ![](w15-p2.png)
+
+### W15-P3:for w15-p3
+
+![](w15-p3.png)
+![](w15-p3-1.png)
